--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 /* Defina a imagem de fundo aqui */
 .custom-bg {
-  background-image: url('../src/img/IMG_3.jpeg');
+  background-image: url('../src/img/IMG.jpeg');
   background-size: 85%; /* Garante que a imagem cubra toda a área */
   background-position: center;
   background-repeat: no-repeat;
